# graphblocks

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  LICENSE  README.ko.md  README.md  README.zh-CN.md  RISK_REGISTER.md  SECURITY.md  pyproject.toml
acceptance/: applications.yaml
compatibility/: README.md  stable-cli-cases.yaml  stable-cli-contracts.json  stable-python-api.json  stable-python-surface.yaml  stable-testing-api.json  stable-testing-cli-cases.yaml  stable-testing-cli-contracts.json  stable-testing-surface.yaml
crates/graphblocks/: Cargo.toml  README.md
crates/graphblocks-cli-native/: Cargo.toml
crates/graphblocks-cli-native/src/: lib.rs  main.rs
crates/graphblocks-cli-native/tests/: native_cli.rs
crates/graphblocks-compiler/: Cargo.toml
crates/graphblocks-compiler/src/: canonical.rs  compiler.rs  diagnostics.rs  graph.rs  lib.rs
crates/graphblocks-compiler/tests/: canonical.rs  compiler.rs  compiler_tck.rs  graph.rs  graph_validation.rs  json_depth.rs  tck.rs
crates/graphblocks-compiler/tests/fixtures/: compiler-cases.json
crates/graphblocks-protocol/: Cargo.toml
crates/graphblocks-protocol/src/: lib.rs
crates/graphblocks-protocol/tests/: remote_payload.rs  worker.rs
crates/graphblocks-python/: Cargo.toml
crates/graphblocks-python/src/: lib.rs
crates/graphblocks-python/src/fixtures/: compiler-cases.json
crates/graphblocks-runtime-core/: Cargo.toml
crates/graphblocks-runtime-core/src/: agent.rs  application_event.rs  async_operation.rs  audit.rs  blob_store.rs  budget.rs  callback_delivery.rs  cancellation.rs  connectors.rs  conversation.rs  deployment.rs  document_parsers.rs  documents.rs  durable_stream.rs  evaluation.rs  exhaustion.rs  ingestion.rs  journal.rs  lib.rs  lifecycle.rs  observability.rs  orchestration.rs  outcome.rs  output_policy.rs  policy.rs  rag.rs  readiness.rs  record_store.rs  resource_scope.rs  retry.rs  review.rs  run_store.rs  scheduler.rs  stdlib_blocks.rs  stdlib_runtime.rs  task_group.rs  test_runtime.rs  timeout.rs  tool.rs  tool_admission.rs  (+10 more)
crates/graphblocks-runtime-core/tests/: agent.rs  application_event.rs  application_event_tck.rs  application_protocol_tck.rs  approval_review_tck.rs  async_operation.rs  audit.rs  blob_store.rs  budget.rs  budget_race_tck.rs  callback_delivery.rs  cancellation.rs  connectors.rs  conversation.rs  conversation_tck.rs  deployment.rs  deployment_tck.rs  document_parsers.rs  documents.rs  documents_tck.rs  durable_stream.rs  evaluation.rs  exhaustion.rs  exhaustion_tck.rs  ingestion.rs  journal.rs  lifecycle.rs  literal_contracts.rs  observability.rs  orchestration.rs  orchestration_tck.rs  outcome.rs  output_policy.rs  output_policy_tck.rs  policy.rs  rag.rs  rag_tck.rs  readiness.rs  record_store.rs  resource_scope.rs  (+29 more)
crates/graphblocks-runtime-core/tests/fixtures/: application-events-cases.json  approval-review-cases.json  builtin-plugin.yaml  documents-cases.json  native-callback-runtime.json  policy-cases.json  rag-cases.json  voice-cases.json
crates/graphblocks-runtime-core/tests/typing/: graph_value_schema_override.rs  graph_value_schema_override.stderr  port_forging.rs  port_forging.stderr  stdlib_port_mismatch.rs  stdlib_port_mismatch.stderr
crates/graphblocks-runtime-durable/: Cargo.toml
crates/graphblocks-runtime-durable/src/: lib.rs
crates/graphblocks-runtime-durable/tests/: checkpoint.rs  sink.rs  source.rs  tck.rs  tool_terminal.rs  window.rs
crates/graphblocks-runtime-seq/: Cargo.toml
crates/graphblocks-runtime-seq/src/: bounded.rs  lib.rs  port_channel.rs  tool_queue.rs
crates/graphblocks-runtime-seq/tests/: bounded.rs  port_channel.rs  tck.rs  tool_queue.rs
crates/graphblocks-runtime-seq/tests/fixtures/: sequence-cases.json
crates/graphblocks-schema/: Cargo.toml
crates/graphblocks-schema/schemas/graphblocks.ai/composition/v1alpha1/: graph-fragment.schema.json
crates/graphblocks-schema/schemas/graphblocks.ai/v1/: graph.schema.json  plugin-manifest.schema.json
crates/graphblocks-schema/schemas/graphblocks.ai/v1alpha1/: application.schema.json  binding.schema.json  plugin-manifest.schema.json
crates/graphblocks-schema/schemas/graphblocks.ai/v1alpha3/: graph.schema.json
crates/graphblocks-schema/src/: lib.rs
crates/graphblocks-schema/tests/: canonical_json_parse.rs  duration.rs  json_depth.rs  resource_tck.rs  retry_limit.rs  schema_id.rs  tck.rs  typed_value_tck.rs
crates/graphblocks-schema/tests/fixtures/: resources.json
crates/graphblocks-telemetry/: Cargo.toml
crates/graphblocks-telemetry/src/: lib.rs
crates/graphblocks-telemetry/tests/: observability.rs
crates/graphblocks-types/: Cargo.toml
crates/graphblocks-types/src/: lib.rs
crates/graphblocks-types/tests/: typed_value.rs
crates/graphblocks-types/tests/fixtures/: typed-values.json
crates/graphblocks/src/: lib.rs
crates/graphblocksd/: Cargo.toml
crates/graphblocksd/src/: lib.rs  main.rs
crates/graphblocksd/tests/: control_plane.rs  webhook_http_client.rs
deployment/: production-targets.yaml
docs/: README.md  concepts.md  conformance.md  getting-started.md  packages.md  runtime.md
examples/: README.md  _integration.py  _runner.py  _test_support.py
examples/01-enterprise-federated-rag/1-3-rust-runtime/: Cargo.toml  README.md  run.py
examples/01-enterprise-federated-rag/1-3-rust-runtime/src/: main.rs
profiles/: policy-profiles.yaml
tests/: conftest.py  test_acceptance_applications.py  test_admission_ticket.py  test_admission_ticket_tui.py  test_agent_core.py  test_agents_package.py  test_application_event.py  test_approval_model.py  test_async_operation.py  test_audit_package.py  test_blob_store.py  test_budget_hierarchy.py  test_budget_ledger.py  test_budget_package.py  test_budget_permit.py  test_budget_race_tck.py  test_callback_core.py  test_callback_url_validation.py  test_callbacks_package.py  test_cancellation_runtime.py  test_canonical.py  test_cli.py  test_cli_package.py  test_client_package.py  test_compatibility_snapshots.py  test_compiler_tck.py  test_compiler_validation.py  (+114 more)
(+337 files in other folders)
