[workspace]
members = [
  "crates/graphblocks-flow",
  "crates/graphblocks-schema",
  "crates/graphblocks-types",
  "crates/graphblocks-compiler",
  "crates/graphblocks-runtime-core",
  "crates/graphblocks-runtime-seq",
  "crates/graphblocks-runtime-durable",
  "crates/graphblocks-python",
  "crates/graphblocks-protocol",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
rust-version = "1.94"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
panic = "deny"
unwrap_used = "deny"
