[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "graphblocks"
version = "0.1.0"
description = "Provider-neutral GraphBlocks contract toolkit"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
  { name = "GraphBlocks contributors" },
]
keywords = ["ai", "workflow", "rag", "graph", "runtime"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
dependencies = [
  "PyYAML>=6.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
]

[project.scripts]
graphblocks = "graphblocks.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/graphblocks"]

[tool.hatch.build.targets.wheel.force-include]
"schemas" = "schemas"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

