[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "graphblocks"
version = "0.1.0"
description = "Provider-neutral contracts, tooling, and integrations for GraphBlocks"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
  { name = "GraphBlocks contributors" },
]
keywords = ["ai", "workflow", "rag", "graph", "runtime"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
dependencies = [
  "packaging>=24.0",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
runtime = [
  "graphblocks-runtime>=0.1,<0.2",
]
pdf = [
  "pypdf>=4.0",
]
test = [
  "mypy>=1.15,<2",
  "pytest>=8.0",
]

[project.scripts]
graphblocks = "graphblocks.cli:main"

[project.urls]
Homepage = "https://github.com/graphblocks/graphblocks"
Documentation = "https://github.com/graphblocks/graphblocks/tree/main/docs"
Source = "https://github.com/graphblocks/graphblocks"
Issues = "https://github.com/graphblocks/graphblocks/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/graphblocks"]

[tool.hatch.build.targets.wheel.force-include]
"schemas" = "graphblocks/schemas"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.mypy]
python_version = "3.11"
strict = true
show_error_codes = true
warn_unused_ignores = true
files = [
  "src/graphblocks/typed.py",
  "src/graphblocks/stdlib_blocks.py",
  "tests/typing/valid_typed_graph.py",
]
