[package]
name = "graphblocks-cli-native"
version = "0.1.0"
description = "Native CLI facade for GraphBlocks compiler workflows"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
graphblocks-compiler = { path = "../graphblocks-compiler" }
graphblocks-runtime-core = { path = "../graphblocks-runtime-core" }
serde_json = "1.0"

[[bin]]
name = "graphblocks-native"
path = "src/main.rs"

[lints]
workspace = true
