[package]
name = "graphblocks-cli-native"
version = "0.1.0"
description = "Native CLI facade for GraphBlocks compiler workflows"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
graphblocks-compiler = { version = "0.1.0", path = "../graphblocks-compiler" }
graphblocks-runtime-core = { version = "0.1.0", path = "../graphblocks-runtime-core" }
serde = "1.0"
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
serde_yaml = "0.9"

[[bin]]
name = "graphblocks-native"
path = "src/main.rs"

[lints]
workspace = true
