[package]
name = "graphblocks-protocol"
version = "0.1.0"
description = "Versioned worker protocol contracts for GraphBlocks"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lints]
workspace = true
