[package]
name = "graphblocks-python"
version = "0.1.0"
description = "PyO3 bindings for the GraphBlocks Rust runtime"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "graphblocks_python"
crate-type = ["cdylib", "rlib"]

[features]
default = []
extension-module = ["pyo3/extension-module"]

[dependencies]
graphblocks-compiler = { path = "../graphblocks-compiler" }
graphblocks-protocol = { path = "../graphblocks-protocol" }
graphblocks-runtime-core = { path = "../graphblocks-runtime-core" }
graphblocksd = { path = "../graphblocksd" }
pyo3 = { version = "0.29.0", features = ["abi3-py311"] }
serde_json = "1.0"

[lints]
workspace = true
