[package]
name = "graphblocks-runtime-core"
version = "0.1.0"
description = "Runtime lifecycle and execution primitives for GraphBlocks"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
graphblocks-compiler = { path = "../graphblocks-compiler" }
rusqlite = { version = "0.34.0", features = ["bundled"] }
serde_json = "1.0"
sha2 = "0.10"

[lints]
workspace = true
