[package]
name = "graphblocks-runtime-core"
version = "0.1.0"
description = "Runtime lifecycle and execution primitives for GraphBlocks"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
graphblocks-compiler = { version = "0.1.0", path = "../graphblocks-compiler" }
graphblocks-schema = { version = "0.1.0", path = "../graphblocks-schema" }
hmac = "0.12"
rusqlite = { version = "0.34.0", features = ["bundled"] }
serde_json = "1.0"
sha2 = "0.10"

[dev-dependencies]
serde_yaml = "0.9"
trybuild = "1.0"

[lints]
workspace = true
