[package]
name = "graphblocks-runtime-durable"
version = "0.1.0"
description = "Durable unbounded stream primitives for GraphBlocks"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
graphblocks-runtime-core = { path = "../graphblocks-runtime-core" }
serde_json = "1.0"

[lints]
workspace = true
