[package]
name = "graphblocks-runtime-durable"
version = "0.1.0"
description = "Durable unbounded stream primitives for GraphBlocks"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
graphblocks-runtime-core = { version = "0.1.0", path = "../graphblocks-runtime-core" }
rusqlite = { version = "0.34.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lints]
workspace = true
