[package]
name = "graphblocks-runtime-seq"
version = "0.1.0"
description = "Bounded sequence runtime primitives for GraphBlocks"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
graphblocks-runtime-core = { version = "0.1.0", path = "../graphblocks-runtime-core" }

[dev-dependencies]
serde_json = "1.0"

[lints]
workspace = true
