[package]
name = "graphblocks-schema"
version = "0.1.0"
description = "Schema identity and reference primitives for GraphBlocks"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
include = ["Cargo.toml", "schemas/**", "src/**", "tests/**"]

[features]
default = ["resource-validation"]
resource-validation = ["dep:jsonschema"]

[dependencies]
jsonschema = { version = "0.47", default-features = false, features = ["arbitrary-precision"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }

[lints]
workspace = true
