[package]
name = "graphblocks-types"
version = "0.1.0"
description = "Typed GraphBlocks value primitives"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
graphblocks-schema = { path = "../graphblocks-schema" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lints]
workspace = true
