[package]
name = "graphblocks-types"
version = "0.1.0"
description = "Typed GraphBlocks value primitives"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
graphblocks-schema = { version = "0.1.0", path = "../graphblocks-schema" }

[dev-dependencies]
serde_json = "1.0"

[lints]
workspace = true
