[package]
name = "graphblocksd"
version = "0.1.0"
description = "GraphBlocks daemon control-plane contracts"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
graphblocks-protocol = { path = "../graphblocks-protocol" }
graphblocks-runtime-core = { path = "../graphblocks-runtime-core" }
serde_json = "1.0"

[lints]
workspace = true
