[package]
name = "graphblocksd"
version = "0.1.0"
description = "GraphBlocks daemon control-plane contracts"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
graphblocks-protocol = { version = "0.1.0", path = "../graphblocks-protocol" }
graphblocks-runtime-core = { version = "0.1.0", path = "../graphblocks-runtime-core" }
graphblocks-runtime-durable = { version = "0.1.0", path = "../graphblocks-runtime-durable" }
serde_json = "1.0"

[lints]
workspace = true
