[package]
name = "graphblocksd"
version = "0.1.0"
description = "GraphBlocks daemon control-plane contracts"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
graphblocks-protocol = { version = "0.1.0", path = "../graphblocks-protocol" }
graphblocks-runtime-core = { version = "0.1.0", path = "../graphblocks-runtime-core" }
graphblocks-runtime-durable = { version = "0.1.0", path = "../graphblocks-runtime-durable" }
graphblocks-schema = { version = "0.1.0", path = "../graphblocks-schema" }
httpdate = "1.0.3"
rustls = { version = "0.23.37", default-features = false, features = ["ring", "std", "tls12"] }
serde_json = "1.0"
webpki-roots = "1.0.8"

[dev-dependencies]
rcgen = { version = "0.14.8", default-features = false, features = ["crypto", "ring"] }
rusqlite = { version = "0.34.0", features = ["bundled"] }

[lints]
workspace = true
